--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "owenvoke/blade-fontawesome": "^2.4",
+        "pxlrbt/filament-excel": "^2.1",
         "wire-elements/modal": "^2.0",
         "wireui/wireui": "^1.18"
     },
